--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -7,7 +7,8 @@
 <body>
 <div class="container">
     <!--    <a th:href="@{/start}" class="btn btn-primary">-->
-    <span>Start!</span>
+    Прийом... пшпшпшп (помехи), прийом, как читается?<br>
+    Это важное сообщение из (пш...п...шп) для особенного человека по имени (п...п.шпш)! Для соблюдения осторожности просьба пройти ряд заданий по удостоверению личности... Да прибудет с вами Java!!!
     <!--    </a>-->
 </div>
 </body>
